[package]
name = "dummy-for-ci"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
dummy-for-ci-check = []
frozen-abi = []

[dependencies]

[lints]
workspace = true
