[package]
name = "fail"
version = "4.1.0-alpha.0"
description = "Solana SBF test program written in Rust"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave"
license = "Apache-2.0"
homepage = "https://anza.xyz"
edition = "2021"
publish = false

[dependencies]
solana-account-info = "=3.1.1"
solana-program-entrypoint = "=3.1.1"
solana-program-error = "=3.0.1"
solana-pubkey = "=4.1.0"

[lib]
crate-type = ["cdylib"]

[workspace]
